# files-upload-example

./: README.md  files-upload.cabal  files.hs  stack.yaml
src/: Files.hs  Main.hs
