name:                files-upload
version:             0.1
synopsis:            ...
description:         ...
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           2016 Nickolay Kudasov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable files-upload
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:
    Files
  build-depends:      base >= 4.7 && < 5
                    , bytestring
                    , mtl
                    , resourcet
                    , servant
                    , servant-server
                    , transformers
                    , wai
                    , wai-extra
                    , warp
  default-language:   Haskell2010

